curlz/src/curlz/templ-lang/snapshots/curlz__language__parser__tests__expr__parse_boolean.snap
---
source: src/curlz/language/parser.rs
expression: p.parse()
---
Ok(
    Template(
        Spanned {
            node: Template {
                children: [
                    EmitRaw(
                        Spanned {
                            node: EmitRaw {
                                raw: "hello ",
                            },
                            span:  @ 1:0-1:6,
                        },
                    ),
                    EmitExpr(
                        Spanned {
                            node: EmitExpr {
                                expr: Const(
                                    Spanned {
                                        node: Const {
                                            value: Boolean(
                                                true,
                                            ),
                                        },
                                        span:  @ 1:9-1:13,
                                    },
                                ),
                            },
                            span:  @ 1:6-0:0,
                        },
                    ),
                ],
            },
            span:  @ 0:0-0:0,
        },
    ),
)
